# knifefish

./: .gitignore  CMakeLists.txt
include/: Config.h
include/BoardRepresentation/: Bitboard.h  Board.h  Pieces.h  Square.h  Types.h  Zobrist.h
include/Engine/: Board.h  Constants.h  Killers.h  MagicBitboardHelper.h  Move.h  MoveGenerator.h  MoveHistory.h  Pieces.h  Player.h  PrincipleVariation.h  TranspositionTable.h  Undo.h
include/Interface/: Interface.h
src/: main.cpp
src/BoardRepresentation/: Bitboard.cpp  Board.cpp  Square.cpp  Zobrist.cpp
src/Engine/: Board.cpp  MagicBitboardHelper.cpp  Move.cpp  MoveGenerator.cpp  Player.cpp  TranspositionTable.cpp
src/Interface/: Interface.cpp
